src/objects/Training_Plan_Achievement__c.object
<CustomObject>
    <fields>
        <fullName>Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement</label>
        <referenceTo>Achievement__c</referenceTo>
        <relationshipLabel>Training Plan Achievements</relationshipLabel>
        <relationshipName>Training_Plan_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Achievement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Achievement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan Section</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only sections from the parent training plan can be selected</errorMessage>
            <filterItems>
                <field>Training_Plan_Section__c.Training_Plan__c</field>
                <operation>equals</operation>
                <valueField>$Source.Training_Plan__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Training_Plan_Section__c</referenceTo>
        <relationshipLabel>Training Plan Achievements</relationshipLabel>
        <relationshipName>Training_Plan_Achievements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>Training Plan Achievements</relationshipLabel>
        <relationshipName>Training_Plan_Achievements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Training Plan Achievement</label>
    <nameField>
        <displayFormat>TPA-{0000000}</displayFormat>
        <label>Training Plan Achievement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>